--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "description": "A holder package for filament navigation scroll position",
     "type": "library",
     "require": {
-        "php": "^8.0",
-        "filament/filament": "^2"
+        "php": "^8.1",
+        "filament/support": "^3.0",
+        "spatie/laravel-package-tools": "^1.15"
     },
     "require-dev": {
         "laravel/pint": "^1.6",
